--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,35 @@
       <form>
         <fieldset class="group">
           <div class="field">
-            <label for="firstName"><strong>Nome</strong><span class="required-mark"> (obrigatório)</span></label>
+            <label for="firstName"
+              ><strong>Nome</strong
+              ><span class="required-mark"> (obrigatório)</span></label
+            >
             <input type="text" name="firstName" id="firstName" required />
           </div>
           <div class="field">
-            <label for="lastName"><strong>Sobrenome</strong><span class="required-mark"> (obrigatório)</span></label>
+            <label for="lastName"
+              ><strong>Sobrenome</strong
+              ><span class="required-mark"> (obrigatório)</span></label
+            >
             <input type="text" name="lastName" id="lastName" required />
           </div>
         </fieldset>
         <fieldset class="group">
           <div class="field">
-            <label for="email"><strong>E-mail</strong><span class="required-mark"> (obrigatório)</span></label>
+            <label for="email"
+              ><strong>E-mail</strong
+              ><span class="required-mark"> (obrigatório)</span></label
+            >
             <input type="email" name="email" id="email" required />
           </div>
           <div class="field">
-            <label for="phone"><strong>Telefone</strong><span class="phone-label-span required-mark"> (obrigatório)</span></label>
+            <label for="phone"
+              ><strong>Telefone</strong
+              ><span class="phone-label-span required-mark">
+                (obrigatório)</span
+              ></label
+            >
             <input type="number" name="phone" id="phone" />
           </div>
         </fieldset>
@@ -55,33 +69,64 @@
         <div id="support-type" class="field">
           <label><strong>Tipo de atendimento</strong></label>
           <label>
-            <input type="radio" name="atendimento-tat" value="ajuda" checked />Ajuda
+            <input
+              type="radio"
+              name="atendimento-tat"
+              value="ajuda"
+              checked
+            />Ajuda
           </label>
           <label>
             <input type="radio" name="atendimento-tat" value="elogio" />Elogio
           </label>
           <label>
-            <input type="radio" name="atendimento-tat" value="feedback" />Feedback
+            <input
+              type="radio"
+              name="atendimento-tat"
+              value="feedback"
+            />Feedback
           </label>
         </div>
         <fieldset class="group">
           <div id="check">
-            <label><strong>Qual seu meio de contato preferencial?</strong></label>
+            <label
+              ><strong>Qual seu meio de contato preferencial?</strong></label
+            >
             <br />
-            <input type="checkbox" id="email-checkbox" name="email" value="email" />
+            <input
+              type="checkbox"
+              id="email-checkbox"
+              name="email"
+              value="email"
+            />
             <label for="email-checkbox">E-mail</label>
-            <input type="checkbox" id="phone-checkbox" name="phone" value="phone" />
+            <input
+              type="checkbox"
+              id="phone-checkbox"
+              name="phone"
+              value="phone"
+            />
             <label for="phone-checkbox">Telefone</label>
           </div>
         </fieldset>
         <div class="field">
           <br />
-          <label for="open-text-area"><strong>Como podemos te ajudar? <br />Algum elogio ou feedback para nós?</strong><span class="required-mark"> (obrigatório)</span></label>
-          <textarea row="6" id="open-text-area" name="open-text-area" required></textarea>
+          <label for="open-text-area"
+            ><strong
+              >Como podemos te ajudar? <br />Algum elogio ou feedback para
+              nós?</strong
+            ><span class="required-mark"> (obrigatório)</span></label
+          >
+          <textarea
+            row="6"
+            id="open-text-area"
+            name="open-text-area"
+            required
+          ></textarea>
         </div>
         <div class="field">
           <label for="file-upload"><strong>Adicone um anexo</strong></label>
-          <input id="file-upload" type="file">
+          <input id="file-upload" type="file" />
         </div>
         <button type="submit" class="button">Enviar</button>
         <div id="privacy">
